# qtbot

./: .env.example  .gitignore  README.md  pyproject.toml  restart_bot.bat  restart_bot.ps1  stop_bot.bat  stop_bot.ps1
src/qqbot/: __init__.py  agent.py  config.py  controller.py  llm.py  main.py  memory.py  models.py  napcat.py  roles.py  search.py  tokenizer.py
tests/: test_agent.py  test_config.py  test_controller.py  test_llm.py  test_mcp_client.py  test_memory.py  test_napcat.py  test_roles.py  test_search.py  test_tokenizer.py
