[project]
name = "qtbot"
version = "0.1.0"
description = "NapCatQQ role-card bot with MemPalace memory and Tavily MCP search."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28",
  "mcp>=1.8",
  "mempalace>=3.0",
  "openai>=1.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "PyYAML>=6.0",
  "tiktoken>=0.7",
  "websockets>=12.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
qqbot = "qqbot.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
